Fix table and img spacings

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -71,7 +71,7 @@
 }
 
 .container img {
-    margin: 10px auto 10px auto;
+    margin: 25px auto 25px auto;
     max-width: 100%;
     display: block;
 }
@@ -115,8 +115,7 @@
 }
 
 .container table {
-    margin-left: auto;
-    margin-right: auto;
+    margin: 25px auto 25px auto;
 }
 
 .container table th {
